Refactor BootstrapMockRuntimeDriver